Trigger queue cleaner sequentially (#14)
* added option to run queue cleaner after content blocker

* updated readme to clearly state what the jobs do

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -12,7 +12,7 @@
     "ContentBlocker": "0/10 * * * * ?"
   },
   "ContentBlocker": {
-    "Enabled": false,
+    "Enabled": true,
     "Blacklist": {
       "Enabled": false,
       "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
@@ -23,7 +23,8 @@
     }
   },
   "QueueCleaner": {
-    "Enabled": true
+    "Enabled": true,
+    "RunSequentially": true
   },
   "qBittorrent": {
     "Enabled": true,
