--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -23,7 +23,8 @@
     }
   },
   "QueueCleaner": {
-    "Enabled": true
+    "Enabled": true,
+    "RunSequentially": true
   },
   "qBittorrent": {
     "Enabled": true,
