--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -177,6 +177,7 @@ services:
       - TRIGGERS__CONTENTBLOCKER=0/30 * * * * ?
 
       - QUEUECLEANER__ENABLED=true
+      - QUEUECLEANER__RUNSEQUENTIALLY=true
 
       - CONTENTBLOCKER__ENABLED=true
       - CONTENTBLOCKER__BLACKLIST__ENABLED=true
