added Serilog and file logging (#17)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -1,10 +1,9 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Quartz": "Warning",
-      "System.Net.Http.HttpClient": "Error"
+    "LogLevel": "Debug",
+    "File": {
+      "Enabled": false,
+      "Path": ""
     }
   },
   "Triggers": {
