--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -1,10 +1,9 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Quartz": "Warning",
-      "System.Net.Http.HttpClient": "Error"
+    "LogLevel": "Information",
+    "File": {
+      "Enabled": false,
+      "Path": ""
     }
   },
   "Triggers": {
