Add sonarr search option (#18)
* added Sonarr search type option

* updated test data

* fixed duplicated Sonarr search items when using search type Season

* added enhanced logging option along with Sonarr and Radarr enhanced logs

* switched to ghcr.io

--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Logging": {
     "LogLevel": "Information",
+    "Enhanced": true,
     "File": {
       "Enabled": false,
       "Path": ""
@@ -44,6 +45,7 @@
   },
   "Sonarr": {
     "Enabled": true,
+    "SearchType": "Episode",
     "Instances": [
       {
         "Url": "http://localhost:8989",
