simplified how the download client selection works (#22)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -26,19 +26,17 @@
     "Enabled": true,
     "RunSequentially": true
   },
+  "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
-    "Enabled": true,
     "Url": "http://localhost:8080",
     "Username": "test",
     "Password": "testing"
   },
   "Deluge": {
-    "Enabled": false,
     "Url": "http://localhost:8112",
     "Password": "testing"
   },
   "Transmission": {
-    "Enabled": false,
     "Url": "http://localhost:9091",
     "Username": "test",
     "Password": "testing"
