--- a/code/Common/Common.csproj
+++ b/code/Common/Common.csproj
@@ -7,7 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Serilog" Version="4.1.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.0" />
+      <PackageReference Include="Serilog" Version="4.2.0" />
     </ItemGroup>
 
 </Project>
