--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -24,7 +24,9 @@
   },
   "QueueCleaner": {
     "Enabled": true,
-    "RunSequentially": true
+    "RunSequentially": true,
+    "IMPORT_FAILED_MAX_STRIKES": 5,
+    "STALLED_MAX_STRIKES": 5
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
