--- a/code/Executable/Executable.csproj
+++ b/code/Executable/Executable.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <AssemblyName>cleanuperr</AssemblyName>
         <TargetFramework>net9.0</TargetFramework>
+        <Version Condition="'$(Version)' == ''">0.0.1</Version>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <UserSecretsId>dotnet-Executable-6108b2ba-f035-47bc-addf-aaf5e20da4b8</UserSecretsId>
