--- a/.github/ISSUE_TEMPLATE/2-feature.yml
+++ b/.github/ISSUE_TEMPLATE/2-feature.yml
@@ -1,6 +1,6 @@
 name: Feature request
 description: File a feature request.
-title: "[FEATURE]: "
+title: "[FEATURE] "
 labels: ["enhancement"]
 body:
   - type: markdown
