--- a/.github/ISSUE_TEMPLATE/3-help.yml
+++ b/.github/ISSUE_TEMPLATE/3-help.yml
@@ -1,6 +1,6 @@
 name: Help request
 description: Ask a question to receive help.
-title: "[HELP]: "
+title: "[HELP] "
 labels: ["question"]
 body:
   - type: markdown
