--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -26,7 +26,12 @@
     "Enabled": true,
     "RunSequentially": true,
     "IMPORT_FAILED_MAX_STRIKES": 5,
-    "STALLED_MAX_STRIKES": 5
+    "IMPORT_FAILED_IGNORE_PRIVATE": true,
+    "IMPORT_FAILED_IGNORE_PATTERNS": [
+      "file is a sample"
+    ],
+    "STALLED_MAX_STRIKES": 5,
+    "STALLED_IGNORE_PRIVATE": true
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
