--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -26,7 +26,10 @@
     "Enabled": true,
     "RunSequentially": true,
     "IMPORT_FAILED_MAX_STRIKES": 5,
-    "STALLED_MAX_STRIKES": 5
+    "IMPORT_FAILED_IGNORE_PRIVATE": false,
+    "IMPORT_FAILED_IGNORE_PATTERNS": [],
+    "STALLED_MAX_STRIKES": 5,
+    "STALLED_IGNORE_PRIVATE": false
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
