Add option to ignore private downloads when blocking files (#39)

--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -13,6 +13,7 @@
   },
   "ContentBlocker": {
     "Enabled": false,
+    "IGNORE_PRIVATE": false,
     "Blacklist": {
       "Enabled": false,
       "Path": ""
