--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -13,6 +13,7 @@
   },
   "ContentBlocker": {
     "Enabled": true,
+    "IGNORE_PRIVATE": true,
     "Blacklist": {
       "Enabled": false,
       "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
