Add Lidarr support (#30)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -15,15 +15,7 @@
   },
   "ContentBlocker": {
     "Enabled": true,
-    "IGNORE_PRIVATE": true,
-    "Blacklist": {
-      "Enabled": false,
-      "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
-    },
-    "Whitelist": {
-      "Enabled": false,
-      "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/whitelist"
-    }
+    "IGNORE_PRIVATE": true
   },
   "QueueCleaner": {
     "Enabled": true,
@@ -54,19 +46,40 @@
   "Sonarr": {
     "Enabled": true,
     "SearchType": "Episode",
+    "Block": {
+      "Type": "blacklist",
+      "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
+    },
     "Instances": [
       {
         "Url": "http://localhost:8989",
-        "ApiKey": "96736c3eb3144936b8f1d62d27be8cee"
+        "ApiKey": "425d1e713f0c405cbbf359ac0502c1f4"
       }
     ]
   },
   "Radarr": {
     "Enabled": true,
+    "Block": {
+      "Type": "blacklist",
+      "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
+    },
     "Instances": [
       {
         "Url": "http://localhost:7878",
-        "ApiKey": "705b553732ab4167ab23909305d60600"
+        "ApiKey": "8b7454f668e54c5b8f44f56f93969761"
+      }
+    ]
+  },
+  "Lidarr": {
+    "Enabled": true,
+    "Block": {
+      "Type": "blacklist",
+      "Path": "https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist"
+    },
+    "Instances": [
+      {
+        "Url": "http://localhost:8686",
+        "ApiKey": "7f677cfdc074414397af53dd633860c5"
       }
     ]
   }
