--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -15,15 +15,7 @@
   },
   "ContentBlocker": {
     "Enabled": false,
-    "IGNORE_PRIVATE": false,
-    "Blacklist": {
-      "Enabled": false,
-      "Path": ""
-    },
-    "Whitelist": {
-      "Enabled": false,
-      "Path": ""
-    }
+    "IGNORE_PRIVATE": false
   },
   "QueueCleaner": {
     "Enabled": true,
@@ -34,7 +26,7 @@
     "STALLED_MAX_STRIKES": 5,
     "STALLED_IGNORE_PRIVATE": false
   },
-  "DOWNLOAD_CLIENT": "qbittorrent",
+  "DOWNLOAD_CLIENT": "none",
   "qBittorrent": {
     "Url": "http://localhost:8080",
     "Username": "",
@@ -50,8 +42,12 @@
     "Password": "testing"
   },
   "Sonarr": {
-    "Enabled": true,
+    "Enabled": false,
     "SearchType": "Episode",
+    "Block": {
+      "Type": "blacklist",
+      "Path": ""
+    },
     "Instances": [
       {
         "Url": "http://localhost:8989",
@@ -61,9 +57,26 @@
   },
   "Radarr": {
     "Enabled": false,
+    "Block": {
+      "Type": "blacklist",
+      "Path": ""
+    },
     "Instances": [
       {
         "Url": "http://localhost:7878",
+        "ApiKey": ""
+      }
+    ]
+  },
+  "Lidarr": {
+    "Enabled": false,
+    "Block": {
+      "Type": "blacklist",
+      "Path": ""
+    },
+    "Instances": [
+      {
+        "Url": "http://localhost:8686",
         "ApiKey": ""
       }
     ]
