--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -8,10 +8,10 @@
 # ctorrent -t -u "http://tracker:6969/announce" -s example.torrent file_name
 
 # api keys
-# sonarr:   96736c3eb3144936b8f1d62d27be8cee
-# radarr:   705b553732ab4167ab23909305d60600
-# lidarr:   4bd467b8702a4ecf94f737922dac6481
-# readarr:  51c053efbea34bad90120d5c2237aa85
+# sonarr:   425d1e713f0c405cbbf359ac0502c1f4
+# radarr:   8b7454f668e54c5b8f44f56f93969761
+# lidarr:   7f677cfdc074414397af53dd633860c5
+# readarr:  53388ac405894ef2ac6b82f907f481aa
 
 services:
   qbittorrent:
@@ -192,32 +192,39 @@ services:
 
       - CONTENTBLOCKER__ENABLED=true
       - CONTENTBLOCKER__IGNORE_PRIVATE=true
-      - CONTENTBLOCKER__BLACKLIST__ENABLED=true
-      - CONTENTBLOCKER__BLACKLIST__PATH=https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist
-      # OR
-      # - CONTENTBLOCKER__WHITELIST__ENABLED=true
-      # - CONTENTBLOCKER__WHITELIST__PATH=https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/whitelist
 
       - DOWNLOAD_CLIENT=qbittorrent
       - QBITTORRENT__URL=http://qbittorrent:8080
       - QBITTORRENT__USERNAME=test
       - QBITTORRENT__PASSWORD=testing
       # OR
+      # - DOWNLOAD_CLIENT=deluge
       # - DELUGE__URL=http://localhost:8112
       # - DELUGE__PASSWORD=testing
       # OR
+      # - DOWNLOAD_CLIENT=transmission
       # - TRANSMISSION__URL=http://localhost:9091
       # - TRANSMISSION__USERNAME=test
       # - TRANSMISSION__PASSWORD=testing
 
       - SONARR__ENABLED=true
       - SONARR__SEARCHTYPE=Episode
+      - SONARR__BLOCK__TYPE=blacklist
+      - SONARR__BLOCK__PATH=https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist
       - SONARR__INSTANCES__0__URL=http://sonarr:8989
-      - SONARR__INSTANCES__0__APIKEY=96736c3eb3144936b8f1d62d27be8cee
+      - SONARR__INSTANCES__0__APIKEY=425d1e713f0c405cbbf359ac0502c1f4
 
       - RADARR__ENABLED=true
+      - RADARR__BLOCK__TYPE=blacklist
+      - RADARR__BLOCK__PATH=https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist
       - RADARR__INSTANCES__0__URL=http://radarr:7878
-      - RADARR__INSTANCES__0__APIKEY=705b553732ab4167ab23909305d60600
+      - RADARR__INSTANCES__0__APIKEY=8b7454f668e54c5b8f44f56f93969761
+
+      - LIDARR__ENABLED=true
+      - LIDARR__BLOCK__TYPE=blacklist
+      - LIDARR__BLOCK__PATH=https://raw.githubusercontent.com/flmorg/cleanuperr/refs/heads/main/blacklist # TODO
+      - LIDARR__INSTANCES__0__URL=http://lidarr:8686
+      - LIDARR__INSTANCES__0__APIKEY=7f677cfdc074414397af53dd633860c5
     volumes:
       - ./data/cleanuperr/logs:/var/logs
     restart: unless-stopped
