Add option to not remove private downloads from the download client (#45)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -15,18 +15,21 @@
   },
   "ContentBlocker": {
     "Enabled": true,
-    "IGNORE_PRIVATE": true
+    "IGNORE_PRIVATE": true,
+    "DELETE_PRIVATE": false
   },
   "QueueCleaner": {
     "Enabled": true,
     "RunSequentially": true,
     "IMPORT_FAILED_MAX_STRIKES": 5,
     "IMPORT_FAILED_IGNORE_PRIVATE": true,
+    "IMPORT_FAILED_DELETE_PRIVATE": false,
     "IMPORT_FAILED_IGNORE_PATTERNS": [
       "file is a sample"
     ],
     "STALLED_MAX_STRIKES": 5,
-    "STALLED_IGNORE_PRIVATE": true
+    "STALLED_IGNORE_PRIVATE": true,
+    "STALLED_DELETE_PRIVATE": false
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
