--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -22,9 +22,11 @@
     "RunSequentially": true,
     "IMPORT_FAILED_MAX_STRIKES": 5,
     "IMPORT_FAILED_IGNORE_PRIVATE": false,
+    "IMPORT_FAILED_DELETE_PRIVATE": false,
     "IMPORT_FAILED_IGNORE_PATTERNS": [],
     "STALLED_MAX_STRIKES": 5,
-    "STALLED_IGNORE_PRIVATE": false
+    "STALLED_IGNORE_PRIVATE": false,
+    "STALLED_DELETE_PRIVATE": false
   },
   "DOWNLOAD_CLIENT": "none",
   "qBittorrent": {
