--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -186,12 +186,15 @@ services:
       - QUEUECLEANER__RUNSEQUENTIALLY=true
       - QUEUECLEANER__IMPORT_FAILED_MAX_STRIKES=5
       - QUEUECLEANER__IMPORT_FAILED_IGNORE_PRIVATE=true
+      - QUEUECLEANER__IMPORT_FAILED_DELETE_PRIVATE=false
       - QUEUECLEANER__IMPORT_FAILED_IGNORE_PATTERNS__0=file is a sample
       - QUEUECLEANER__STALLED_MAX_STRIKES=5
       - QUEUECLEANER__STALLED_IGNORE_PRIVATE=true
+      - QUEUECLEANER__STALLED_DELETE_PRIVATE=false
 
       - CONTENTBLOCKER__ENABLED=true
       - CONTENTBLOCKER__IGNORE_PRIVATE=true
+      - CONTENTBLOCKER__DELETE_PRIVATE=false
 
       - DOWNLOAD_CLIENT=qbittorrent
       - QBITTORRENT__URL=http://qbittorrent:8080
