Add option to reset stalled strikes on download progress (#50)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -28,6 +28,7 @@
       "file is a sample"
     ],
     "STALLED_MAX_STRIKES": 5,
+    "STALLED_RESET_STRIKES_ON_PROGRESS": true,
     "STALLED_IGNORE_PRIVATE": true,
     "STALLED_DELETE_PRIVATE": false
   },
