--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -25,6 +25,7 @@
     "IMPORT_FAILED_DELETE_PRIVATE": false,
     "IMPORT_FAILED_IGNORE_PATTERNS": [],
     "STALLED_MAX_STRIKES": 0,
+    "STALLED_RESET_STRIKES_ON_PROGRESS": false,
     "STALLED_IGNORE_PRIVATE": false,
     "STALLED_DELETE_PRIVATE": false
   },
