Add Notifiarr support (#52)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -86,5 +86,12 @@
         "ApiKey": "7f677cfdc074414397af53dd633860c5"
       }
     ]
+  },
+  "Notifiarr": {
+    "ON_IMPORT_FAILED_STRIKE": true,
+    "ON_STALLED_STRIKE": true,
+    "ON_QUEUE_ITEM_DELETE": true,
+    "API_KEY": "",
+    "CHANNEL_ID": ""
   }
 }
