--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -83,5 +83,12 @@
         "ApiKey": ""
       }
     ]
+  },
+  "Notifiarr": {
+    "ON_IMPORT_FAILED_STRIKE": false,
+    "ON_STALLED_STRIKE": false,
+    "ON_QUEUE_ITEM_DELETE": false,
+    "API_KEY": "",
+    "CHANNEL_ID": ""
   }
 }
