Add download cleaner and dry run (#58)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "DRY_RUN": true,
   "HTTP_MAX_RETRIES": 0,
   "HTTP_TIMEOUT": 10,
   "Logging": {
@@ -11,7 +12,8 @@
   },
   "Triggers": {
     "QueueCleaner": "0/10 * * * * ?",
-    "ContentBlocker": "0/10 * * * * ?"
+    "ContentBlocker": "0/10 * * * * ?",
+    "DownloadCleaner": "0/10 * * * * ?"
   },
   "ContentBlocker": {
     "Enabled": true,
@@ -31,6 +33,18 @@
     "STALLED_RESET_STRIKES_ON_PROGRESS": true,
     "STALLED_IGNORE_PRIVATE": true,
     "STALLED_DELETE_PRIVATE": false
+  },
+  "DownloadCleaner": {
+    "Enabled": false,
+    "DELETE_PRIVATE": false,
+    "CATEGORIES": [
+      {
+        "Name": "tv-sonarr",
+        "MAX_RATIO": -1,
+        "MIN_SEED_TIME": 0,
+        "MAX_SEED_TIME": -1
+      }
+    ]
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
@@ -90,7 +104,8 @@
   "Notifiarr": {
     "ON_IMPORT_FAILED_STRIKE": true,
     "ON_STALLED_STRIKE": true,
-    "ON_QUEUE_ITEM_DELETE": true,
+    "ON_QUEUE_ITEM_DELETED": true,
+    "ON_DOWNLOAD_CLEANED": true,
     "API_KEY": "",
     "CHANNEL_ID": ""
   }
