--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "DRY_RUN": false,
   "HTTP_MAX_RETRIES": 0,
   "HTTP_TIMEOUT": 100,
   "Logging": {
@@ -11,7 +12,8 @@
   },
   "Triggers": {
     "QueueCleaner": "0 0/5 * * * ?",
-    "ContentBlocker": "0 0/5 * * * ?"
+    "ContentBlocker": "0 0/5 * * * ?",
+    "DownloadCleaner": "0 0 * * * ?"
   },
   "ContentBlocker": {
     "Enabled": false,
@@ -28,6 +30,11 @@
     "STALLED_RESET_STRIKES_ON_PROGRESS": false,
     "STALLED_IGNORE_PRIVATE": false,
     "STALLED_DELETE_PRIVATE": false
+  },
+  "DownloadCleaner": {
+    "Enabled": false,
+    "DELETE_PRIVATE": false,
+    "CATEGORIES": []
   },
   "DOWNLOAD_CLIENT": "none",
   "qBittorrent": {
@@ -87,7 +94,8 @@
   "Notifiarr": {
     "ON_IMPORT_FAILED_STRIKE": false,
     "ON_STALLED_STRIKE": false,
-    "ON_QUEUE_ITEM_DELETE": false,
+    "ON_QUEUE_ITEM_DELETED": false,
+    "ON_DOWNLOAD_CLEANED": false,
     "API_KEY": "",
     "CHANNEL_ID": ""
   }
