--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -250,6 +250,7 @@ services:
       # - NOTIFIARR__ON_IMPORT_FAILED_STRIKE=true
       # - NOTIFIARR__ON_STALLED_STRIKE=true
       # - NOTIFIARR__ON_QUEUE_ITEM_DELETED=true
+      # - NOTIFIARR__ON_DOWNLOAD_CLEANED=true
       # - NOTIFIARR__API_KEY=notifiarr_secret
       # - NOTIFIARR__CHANNEL_ID=discord_channel_id
     volumes:
