Add option to ignore specific downloads (#79)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -18,11 +18,13 @@
   "ContentBlocker": {
     "Enabled": true,
     "IGNORE_PRIVATE": true,
-    "DELETE_PRIVATE": false
+    "DELETE_PRIVATE": false,
+    "IGNORED_DOWNLOADS_PATH": "../test/data/cleanuperr/ignored_downloads"
   },
   "QueueCleaner": {
     "Enabled": true,
     "RunSequentially": true,
+    "IGNORED_DOWNLOADS_PATH": "../test/data/cleanuperr/ignored_downloads",
     "IMPORT_FAILED_MAX_STRIKES": 5,
     "IMPORT_FAILED_IGNORE_PRIVATE": true,
     "IMPORT_FAILED_DELETE_PRIVATE": false,
@@ -44,7 +46,8 @@
         "MIN_SEED_TIME": 0,
         "MAX_SEED_TIME": -1
       }
-    ]
+    ],
+    "IGNORED_DOWNLOADS_PATH": "../test/data/cleanuperr/ignored_downloads"
   },
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
