--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -17,11 +17,13 @@
   },
   "ContentBlocker": {
     "Enabled": false,
-    "IGNORE_PRIVATE": false
+    "IGNORE_PRIVATE": false,
+    "IGNORED_DOWNLOADS_PATH": ""
   },
   "QueueCleaner": {
     "Enabled": true,
     "RunSequentially": true,
+    "IGNORED_DOWNLOADS_PATH": "",
     "IMPORT_FAILED_MAX_STRIKES": 0,
     "IMPORT_FAILED_IGNORE_PRIVATE": false,
     "IMPORT_FAILED_DELETE_PRIVATE": false,
@@ -34,7 +36,8 @@
   "DownloadCleaner": {
     "Enabled": false,
     "DELETE_PRIVATE": false,
-    "CATEGORIES": []
+    "CATEGORIES": [],
+    "IGNORED_DOWNLOADS_PATH": ""
   },
   "DOWNLOAD_CLIENT": "none",
   "qBittorrent": {
