Add download client customizable url base (#43)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -52,15 +52,18 @@
   "DOWNLOAD_CLIENT": "qbittorrent",
   "qBittorrent": {
     "Url": "http://localhost:8080",
+    "URL_BASE": "",
     "Username": "test",
     "Password": "testing"
   },
   "Deluge": {
     "Url": "http://localhost:8112",
+    "URL_BASE": "",
     "Password": "testing"
   },
   "Transmission": {
     "Url": "http://localhost:9091",
+    "URL_BASE": "transmission",
     "Username": "test",
     "Password": "testing"
   },
