--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -42,15 +42,18 @@
   "DOWNLOAD_CLIENT": "none",
   "qBittorrent": {
     "Url": "http://localhost:8080",
+    "URL_BASE": "",
     "Username": "",
     "Password": ""
   },
   "Deluge": {
     "Url": "http://localhost:8112",
+    "URL_BASE": "",
     "Password": "testing"
   },
   "Transmission": {
     "Url": "http://localhost:9091",
+    "URL_BASE": "transmission",
     "Username": "test",
     "Password": "testing"
   },
