--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -3,7 +3,7 @@
   "HTTP_MAX_RETRIES": 0,
   "HTTP_TIMEOUT": 10,
   "Logging": {
-    "LogLevel": "Debug",
+    "LogLevel": "Verbose",
     "Enhanced": true,
     "File": {
       "Enabled": false,
@@ -34,7 +34,14 @@
     "STALLED_MAX_STRIKES": 5,
     "STALLED_RESET_STRIKES_ON_PROGRESS": true,
     "STALLED_IGNORE_PRIVATE": true,
-    "STALLED_DELETE_PRIVATE": false
+    "STALLED_DELETE_PRIVATE": false,
+    "SLOW_MAX_STRIKES": 5,
+    "SLOW_RESET_STRIKES_ON_PROGRESS": true,
+    "SLOW_IGNORE_PRIVATE": false,
+    "SLOW_DELETE_PRIVATE": false,
+    "SLOW_MIN_SPEED": "1MB",
+    "SLOW_MAX_TIME": 20,
+    "SLOW_IGNORE_ABOVE_SIZE": "4GB"
   },
   "DownloadCleaner": {
     "Enabled": false,
