--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -178,7 +178,7 @@ services:
       - TZ=Europe/Bucharest
       - DRY_RUN=false
 
-      - LOGGING__LOGLEVEL=Debug
+      - LOGGING__LOGLEVEL=Verbose
       - LOGGING__FILE__ENABLED=true
       - LOGGING__FILE__PATH=/var/logs
       - LOGGING__ENHANCED=true
@@ -193,13 +193,24 @@ services:
       - QUEUECLEANER__ENABLED=true
       - QUEUECLEANER__IGNORED_DOWNLOADS_PATH=/ignored
       - QUEUECLEANER__RUNSEQUENTIALLY=true
+
       - QUEUECLEANER__IMPORT_FAILED_MAX_STRIKES=5
       - QUEUECLEANER__IMPORT_FAILED_IGNORE_PRIVATE=true
       - QUEUECLEANER__IMPORT_FAILED_DELETE_PRIVATE=false
       - QUEUECLEANER__IMPORT_FAILED_IGNORE_PATTERNS__0=file is a sample
+
       - QUEUECLEANER__STALLED_MAX_STRIKES=5
+      - QUEUECLEANER__STALLED_RESET_STRIKES_ON_PROGRESS=true
       - QUEUECLEANER__STALLED_IGNORE_PRIVATE=true
       - QUEUECLEANER__STALLED_DELETE_PRIVATE=false
+
+      - QUEUECLEANER__SLOW_MAX_STRIKES=5
+      - QUEUECLEANER__SLOW_RESET_STRIKES_ON_PROGRESS=true
+      - QUEUECLEANER__SLOW_IGNORE_PRIVATE=false
+      - QUEUECLEANER__SLOW_DELETE_PRIVATE=false
+      - QUEUECLEANER__SLOW_MIN_SPEED=1MB
+      - QUEUECLEANER__SLOW_MAX_TIME=20
+      - QUEUECLEANER__SLOW_IGNORE_ABOVE_SIZE=1KB
 
       - CONTENTBLOCKER__ENABLED=true
       - CONTENTBLOCKER__IGNORED_DOWNLOADS_PATH=/ignored
