Fix missing notifications for new strike types (#112)

--- a/code/Executable/appsettings.Development.json
+++ b/code/Executable/appsettings.Development.json
@@ -117,6 +117,7 @@
   "Notifiarr": {
     "ON_IMPORT_FAILED_STRIKE": true,
     "ON_STALLED_STRIKE": true,
+    "ON_SLOW_STRIKE": true,
     "ON_QUEUE_ITEM_DELETED": true,
     "ON_DOWNLOAD_CLEANED": true,
     "API_KEY": "",
