--- a/code/Executable/appsettings.json
+++ b/code/Executable/appsettings.json
@@ -100,6 +100,7 @@
   "Notifiarr": {
     "ON_IMPORT_FAILED_STRIKE": false,
     "ON_STALLED_STRIKE": false,
+    "ON_SLOW_STRIKE": false,
     "ON_QUEUE_ITEM_DELETED": false,
     "ON_DOWNLOAD_CLEANED": false,
     "API_KEY": "",
