--- a/code/test/docker-compose.yml
+++ b/code/test/docker-compose.yml
@@ -262,12 +262,13 @@ services:
       - LIDARR__INSTANCES__0__URL=http://lidarr:8686
       - LIDARR__INSTANCES__0__APIKEY=7f677cfdc074414397af53dd633860c5
 
-      # - NOTIFIARR__ON_IMPORT_FAILED_STRIKE=true
-      # - NOTIFIARR__ON_STALLED_STRIKE=true
-      # - NOTIFIARR__ON_QUEUE_ITEM_DELETED=true
-      # - NOTIFIARR__ON_DOWNLOAD_CLEANED=true
-      # - NOTIFIARR__API_KEY=notifiarr_secret
-      # - NOTIFIARR__CHANNEL_ID=discord_channel_id
+      - NOTIFIARR__ON_IMPORT_FAILED_STRIKE=true
+      - NOTIFIARR__ON_STALLED_STRIKE=true
+      - NOTIFIARR__ON_SLOW_STRIKE=true
+      - NOTIFIARR__ON_QUEUE_ITEM_DELETED=true
+      - NOTIFIARR__ON_DOWNLOAD_CLEANED=true
+      - NOTIFIARR__API_KEY=notifiarr_secret
+      - NOTIFIARR__CHANNEL_ID=discord_channel_id
     volumes:
       - ./data/cleanuperr/logs:/var/logs
       - ./data/cleanuperr/ignored_downloads:/ignored
